// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PetList /> PetList Data empty with User Session renders correctly and Snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f6f6f6",
      },
      {
        "flex": 1,
      },
    ]
  }
  testID="pet-view"
>
  <View
    style={
      [
        {
          "backgroundColor": "#f6f6f6",
        },
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
    testID="pet-view"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0891b2",
            "fontSize": 30,
          },
          [
            undefined,
          ],
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="pet-icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "color": "#155e75",
          },
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "lineHeight": 28,
          },
          undefined,
        ]
      }
      testID="pet-title"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "bottom": 30,
          "opacity": 1,
          "position": "absolute",
          "right": 50,
        }
      }
      testID="pet-button-register"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#0891b2",
              "fontSize": 60,
            },
            [
              undefined,
            ],
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        testID="pet-icon"
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`<PetList /> PetList with No User Session renders correctly and Snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f6f6f6",
      },
      {
        "flex": 1,
      },
    ]
  }
  testID="pet-view"
>
  <View
    style={
      [
        {
          "backgroundColor": "#f6f6f6",
        },
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
    testID="pet-view"
  >
    <Text />
    <Text
      style={
        [
          {
            "color": "#155e75",
          },
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "lineHeight": 28,
          },
          undefined,
        ]
      }
      testID="pet-title"
    >
      pet_list_message_2
    </Text>
    <Text
      style={
        [
          {
            "color": "#155e75",
          },
          {
            "fontSize": 18,
            "fontWeight": "bold",
            "lineHeight": 28,
          },
          undefined,
        ]
      }
      testID="pet-title"
    >
      pet_list_message_3
    </Text>
  </View>
</View>
`;

exports[`<PetList /> goToPetRegister is called with User Session and PetList and Snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f6f6f6",
      },
      {
        "flex": 1,
      },
    ]
  }
  testID="pet-view"
>
  <View
    style={
      [
        {
          "backgroundColor": "#f6f6f6",
        },
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
    testID="pet-view"
  >
    <RCTScrollView
      data={
        [
          {
            "id": "testId",
            "inserted_at": "testInsertedId",
            "pet_age": "testPetAge",
            "pet_breed": "testPetBreed",
            "pet_gender": "testPetGender",
            "pet_image": "https://fakeurl/fakeimage/test.png",
            "pet_medical_condition": "testPetMC",
            "pet_name": "testPetName",
            "pet_type": "testPetType",
            "profiles": {
              "country_code": "testProfileCountryCode",
              "email": "testProfileEmail",
              "id": "testProfileId",
              "phone": "testProfilePhone",
            },
            "user_id": "testUserId",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          refreshing={false}
        />
      }
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={[]}
      style={
        {
          "width": "100%",
        }
      }
      testID="pet-list"
      viewabilityConfigCallbackPairs={[]}
    >
      <RCTRefreshControl />
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="pet-details-card"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#f6f6f6",
                  },
                  {
                    "borderColor": "#d1d1d1",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "gap": 5,
                    "marginHorizontal": 10,
                    "marginVertical": 5,
                    "paddingBottom": 10,
                    "paddingTop": 4,
                  },
                ]
              }
              testID="pet-view"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#f6f6f6",
                    },
                    {
                      "alignItems": "flex-end",
                      "marginHorizontal": 10,
                    },
                  ]
                }
                testID="pet-view"
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "flex-end",
                      "justifyContent": "flex-end",
                      "opacity": 1,
                      "width": "15%",
                    }
                  }
                  testID="pet-delete-card-icon"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#6b7280",
                          "fontSize": 20,
                        },
                        [
                          undefined,
                        ],
                        {
                          "fontFamily": "ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                    testID="pet-icon"
                  >
                    
                  </Text>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "backgroundColor": "#f6f6f6",
                    },
                    {
                      "alignItems": "center",
                      "marginHorizontal": 10,
                    },
                  ]
                }
                testID="pet-view"
              >
                <Image
                  resizeMode="cover"
                  source={
                    {
                      "uri": "https://fakeurl/fakeimage/test.png",
                    }
                  }
                  style={
                    {
                      "borderRadius": 50,
                      "height": 70,
                      "width": 70,
                    }
                  }
                />
              </View>
              <View
                style={
                  [
                    {
                      "backgroundColor": "#f6f6f6",
                    },
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "marginHorizontal": 10,
                    },
                  ]
                }
                testID="pet-view"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#11181C",
                      },
                      {
                        "fontSize": 14,
                        "lineHeight": 20,
                      },
                      {
                        "fontWeight": "500",
                      },
                    ]
                  }
                  testID="pet-text"
                >
                  testPetName
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "#11181C",
                      },
                      {
                        "fontSize": 14,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#6b7280",
                      },
                    ]
                  }
                  testID="pet-text"
                >
                  testPetBreed
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "#11181C",
                      },
                      {
                        "fontSize": 14,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#6b7280",
                      },
                    ]
                  }
                  testID="pet-text"
                >
                  testPetAge
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "bottom": 30,
          "opacity": 1,
          "position": "absolute",
          "right": 50,
        }
      }
      testID="pet-button-register-with-empty-data"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#0891b2",
              "fontSize": 60,
            },
            [
              undefined,
            ],
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        testID="pet-icon"
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`<PetList /> setLoading true makes appear the ActivityIndicator and Snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f6f6f6",
      },
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  testID="pet-view"
>
  <ActivityIndicator />
  <Text
    style={
      [
        {
          "color": "#11181C",
        },
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        undefined,
      ]
    }
    testID="pet-text"
  />
</View>
`;
